add links medsos

--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
                 <!-- Left -->
                 <div class="w-full px-4 lg:w-1/2 animate-fade-in">
                     <h1 class="text-base font-semibold text-primary md:text-xl">
-                        Hello Everyone,
-                        I am <span class="block mt-1 text-4xl font-bold text-dark">Dani Ramadhan</span>
+                        Hallo bre, aing <span class="block mt-1 text-4xl font-bold text-dark">Dani Ramadhan</span>
                     </h1>
                     <h2 class="mb-5 text-lg font-medium text-secondary">
                         <span class="text-dark">Coder</span> | Rider | Mountaineer
@@ -71,7 +70,7 @@
                         Belajar programming itu mudah dan menyenangkan bukan.
                         <span class="font-bold text-red-500">Bukan!</span>
                     </p>
-                    <a href="#contact"
+                    <a href="https://wa.me/6288293634298" target="_blank"
                         class="inline-block px-8 py-3 text-base font-semibold text-white transition duration-300 ease-in-out rounded-full bg-primary hover:opacity-80 hover:shadow-lg">
                         Contact Me
                     </a>
@@ -112,14 +111,13 @@
                     </p>
                 </div>
                 <div class="w-full px-4 lg:w-1/2">
-                    <h3 class="mb-4 text-2xl font-semibold text-dark lg:text-3xl lg:pt-10">Mari Berteman</h3>
+                    <h3 class="mb-4 text-2xl font-semibold text-dark lg:text-3xl lg:pt-10">Networking</h3>
                     <p class="mb-6 text-base font-medium text-secondary lg:text-lg">
-                        Di luar dunia Coding, saya menemukan inspirasi dari perjalanan dan petualangan. Saya percaya kolaborasi adalah kunci untuk menghasilkan karya terbaik.
-
+                        Di luar dunia Technology, saya banyak menemukan inspirasi dari perjalanan dan petualangan. Saya percaya kolaborasi adalah kunci untuk menghasilkan karya terbaik.
                     </p>
                     <div class="flex items-center">
                         <!-- Tiktok -->
-                        <a href="" target="_blank"
+                        <a href="https://www.tiktok.com/@rmdhn_1709?is_from_webapp=1&sender_device=pc" target="_blank"
                             class="flex items-center justify-center mr-3 border rounded-full hover:text-white w-9 h-9 border-slate-300 hover:border-primary hover:bg-primary">
                             <svg role="img" width="20"class="fill-current" viewBox="0 0 24 24"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -129,7 +127,7 @@
                             </svg>
                         </a>
                         <!-- Instagram -->
-                        <a href="" target="_blank"
+                        <a href="https://www.instagram.com/rmdhn_1712/" target="_blank"
                             class="flex items-center justify-center mr-3 border rounded-full hover:text-white w-9 h-9 border-slate-300 hover:border-primary hover:bg-primary">
                             <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -139,7 +137,7 @@
                             </svg>
                         </a>
                         <!-- Twitter -->
-                        <a href="" target="_blank"
+                        <a href="https://x.com/DaniRamadh79135?t=RWR0c3aVno-IAW8EKSfUUQ&s=09" target="_blank"
                             class="flex items-center justify-center mr-3 border rounded-full hover:text-white w-9 h-9 border-slate-300 hover:border-primary hover:bg-primary">
                             <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                 <title>X</title>
@@ -147,7 +145,7 @@
                             </svg>
                         </a>
                         <!-- LinkedIn -->
-                        <a href="" target="_blank"
+                        <a href="https://www.linkedin.com/in/dani-ramadhan-8a95322bb/" target="_blank"
                             class="flex items-center justify-center mr-3 border rounded-full hover:text-white w-9 h-9 border-slate-300 hover:border-primary hover:bg-primary">
                             <svg width="20" class="fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"/>
                                 <title>LinkedIn</title>
