--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <!-- Left -->
                 <div class="w-full px-4 lg:w-1/2 animate-fade-in">
                     <h1 class="text-base font-semibold text-primary md:text-xl">
-                        Hallo bre, aing <span class="block mt-1 text-4xl font-bold text-dark">Dani Ramadhan</span>
+                        Hallo, i'm <span class="block mt-1 text-4xl font-bold text-dark">Dani Ramadhan</span>
                     </h1>
                     <h2 class="mb-5 text-lg font-medium text-secondary">
                         <span class="text-dark">Coder</span> | Rider | Mountaineer
@@ -312,7 +312,7 @@
             <div class="w-full px-4">
                 <div class="max-w-xl mx-auto mb-16 text-center">
                     <h4 class="mb-2 text-lg font-semibold text-primary">Contact</h4>
-                    <h2 class="mb-4 text-3xl font-bold text-dark sm:text-4xl lg:text-5xl">Hubungi Kami</h2>
+                    <h2 class="mb-4 text-3xl font-bold text-dark sm:text-4xl lg:text-5xl">Hubungi Saya</h2>
                     <p class="font-medium text-secondary">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, laborum.
                     </p>
