--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="relative flex items-center justify-between">
                 <div class="px-4">
-                    <a href="#home" class="block py-6 text-lg font-bold text-primary">Dani Ramadhan</a>
+                    <a href="#home" class="block py-6 text-lg font-bold text-primary">Initial D</a>
                 </div>
                 <div class="flex items-center px-4">
                     <button id="hamburger" name="hamburger" type="button" class="absolute block right-4 lg:hidden">
