add portfolio Eletion

--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
             <div class="flex flex-wrap justify-center w-full px-5 xl:w-11/12 xl:mx-auto">
                 <div class="p-4 mb-12 md:w-1/2">
                     <div class="overflow-hidden rounded-md shadow-md">
-                        <img src="dist/img/portfolio/1.png" alt="pertama" width="w-full">
+                        <img src="dist/img/portfolio/Election/dashboard.png" alt="pertama" width="w-full">
                     </div>
-                    <h3 class="mt-5 mb-3 text-xl font-semibold text-dark">Aplikasi Landing Page</h3>
+                    <h3 class="mt-5 mb-3 text-xl font-semibold text-dark">Election (Sistem Pemilihan Ketua Osis)</h3>
                     <p class="text-base font-medium text-secondary">Membuat landing page yang menarik dan berkinerja tinggi untuk kampanye pemasaran produk, dengan fokus pada konversi dan pengalaman pengguna.</p>
                 </div>
                 <div class="p-4 mb-12 md:w-1/2">
