update Portfolio Election

--- a/index.html
+++ b/index.html
@@ -183,15 +183,37 @@
                         <div class="swiper portfolio-slider">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <img src="dist/img/portfolio/Election/registrasi.png" alt="Tampilan Dashboard" class="object-cover w-full">
+                                    <img src="dist/img/portfolio/Election/registrasi.png" alt="Halaman Registrasi" class="object-cover w-full">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="dist/img/portfolio/Election/vote1.png" alt="Tampilan Halaman Voting" class="object-cover w-full">
+                                    <img src="dist/img/portfolio/Election/vote1.png" alt="Halaman Voting" class="object-cover w-full">
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="dist/img/portfolio/Election/vote2.png" alt="Tampilan Hasil Akhir" class="object-cover w-full">
+                                    <img src="dist/img/portfolio/Election/vote2.png" alt="Setelah Voting" class="object-cover w-full">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="dist/img/portfolio/Election/tmp-result.png" alt="Hasil Sementara" class="object-cover w-full">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="dist/img/portfolio/Election/login.png" alt="Halaman Login" class="object-cover w-full">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="dist/img/portfolio/Election/dashboard.png" alt="Dashboard" class="object-cover w-full">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="dist/img/portfolio/Election/add-candidate.png" alt="Tambah Kandidat" class="object-cover w-full">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="dist/img/portfolio/Election/manage-candidate.png" alt="Kelola Kandidat" class="object-cover w-full">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="dist/img/portfolio/Election/edit-candidate.png" alt="Edit Kandidat" class="object-cover w-full">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="dist/img/portfolio/Election/results.png" alt="Halaman Hasil" class="object-cover w-full">
                                 </div>
                             </div>
+                            <div class="swiper-pagination"></div>
                         </div>
                     </div>
                     <h3 class="mt-5 mb-3 text-xl font-semibold text-dark">Election (Sistem Pemilihan Ketua Osis)</h3>
