change about me desk

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <h4 class="mb-3 text-lg font-bold uppercase text-primary">About Me</h4>
                     <h2 class="max-w-md mb-5 text-3xl font-bold text-dark lg:text-4xl">Mengubah Ide Menjadi Solusi Digital yang Interaktif</h2>
                     <p class="max-w-xl text-base font-medium lg:text-lg text-secondary">
-                        Saya seorang Full Stack Developer yang bersemangat dalam menciptakan aplikasi yang fungsional dan intuitif. Saya mampu mengubah desain menjadi kode yang hidup dan responsif.
+                        Saya seorang Junior Full Stack Developer yang bersemangat dalam menciptakan aplikasi yang fungsional dan intuitif. Saya mampu mengubah desain menjadi kode yang hidup dan responsif.
                     </p>
                 </div>
                 <div class="w-full px-4 lg:w-1/2">
