--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
             <div class="flex flex-wrap justify-center">
                 <div class="w-full px-4 md:w-1/2 lg:w-1/3">
                     <div class="mb-10 overflow-hidden bg-white shadow-xl rounded-xl">
-                        <img class="w-full" src="dist/img/activity/programming.jpeg" alt="Blog Post">
+                        <img class="w-full" src="dist/img/activity/programming/1.jpeg" alt="Blog Post">
                         <div class="px-6 py-8">
                             <h3>
                                 <a href="#" class="block mb-3 text-xl font-semibold truncate text-dark hover:text-primary">Programming</a>
@@ -392,7 +392,7 @@
         
                 <div class="w-full px-4 md:w-1/2 lg:w-1/3">
                     <div class="mb-10 overflow-hidden bg-white shadow-xl rounded-xl">
-                        <img class="w-full" src="dist/img/activity/hiking.jpg" alt="Blog Post">
+                        <img class="w-full" src="dist/img/activity/hiking/1.jpg" alt="Blog Post">
                         <div class="px-6 py-8">
                             <h3>
                                 <a href="#" class="block mb-3 text-xl font-semibold truncate text-dark hover:text-primary">Hiking</a>
@@ -407,13 +407,13 @@
         
                 <div class="w-full px-4 md:w-1/2 lg:w-1/3">
                     <div class="mb-10 overflow-hidden bg-white shadow-xl rounded-xl">
-                        <img class="w-full" src="dist/img/activity/touring.jpeg" alt="Blog Post">
+                        <img class="w-full" src="dist/img/activity/touring/1.jpeg" alt="Blog Post">
                         <div class="px-6 py-8">
                             <h3>
                                 <a href="#" class="block mb-3 text-xl font-semibold truncate text-dark hover:text-primary">Touring</a>
                             </h3>
                             <p class="mb-6 text-base font-medium text-secondary">
-                                Menjelajahi keindahan tersembunyi di sepanjang jalanan. Perjalanan di atas roda bukan hanya soal tujuan, tetapi tentang setiap momen dan kebebasan yang dirasakan.
+                                Menjelajahi keindahan tersembunyi di sepanjang jalanan. Perjalanan di bukan hanya soal tujuan, tetapi tentang setiap momen dan kebebasan yang dirasakan.
                             </p>                            
                             <a href="#" class="px-4 py-2 text-sm font-medium text-white rounded-lg bg-primary hover:opacity-80">Baca Selengkapnya</a>
                         </div>
