--- a/index.html
+++ b/index.html
@@ -228,16 +228,56 @@
                 <div class="relative">
                     <div class="swiper portfolio-slider">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide"><img src="dist/img/portfolio/Election/registrasi.png" alt="Halaman Registrasi" class="object-cover w-full"></div>
-                        <div class="swiper-slide"><img src="dist/img/portfolio/Election/vote1.png" alt="Halaman Voting" class="object-cover w-full"></div>
-                        <div class="swiper-slide"><img src="dist/img/portfolio/Election/vote2.png" alt="Setelah Voting" class="object-cover w-full"></div>
-                        <div class="swiper-slide"><img src="dist/img/portfolio/Election/tmp-result.png" alt="Hasil Sementara" class="object-cover w-full"></div>
-                        <div class="swiper-slide"><img src="dist/img/portfolio/Election/login.png" alt="Halaman Login" class="object-cover w-full"></div>
-                        <div class="swiper-slide"><img src="dist/img/portfolio/Election/dashboard.png" alt="Dashboard" class="object-cover w-full"></div>
-                        <div class="swiper-slide"><img src="dist/img/portfolio/Election/add-candidate.png" alt="Tambah Kandidat" class="object-cover w-full"></div>
-                        <div class="swiper-slide"><img src="dist/img/portfolio/Election/manage-candidate.png" alt="Kelola Kandidat" class="object-cover w-full"></div>
-                        <div class="swiper-slide"><img src="dist/img/portfolio/Election/edit-candidate.png" alt="Edit Kandidat" class="object-cover w-full"></div>
-                        <div class="swiper-slide"><img src="dist/img/portfolio/Election/results.png" alt="Halaman Hasil" class="object-cover w-full"></div>
+                        <div class="swiper-slide">
+                            <div class="swiper-zoom-container">
+                                <img src="dist/img/portfolio/Election/registrasi.png" alt="Halaman Registrasi" class="object-cover w-full">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper-zoom-container">
+                                <img src="dist/img/portfolio/Election/vote1.png" alt="Halaman Voting" class="object-cover w-full">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper-zoom-container">
+                                <img src="dist/img/portfolio/Election/vote2.png" alt="Setelah Voting" class="object-cover w-full">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper-zoom-container">
+                                <img src="dist/img/portfolio/Election/tmp-result.png" alt="Hasil Sementara" class="object-cover w-full">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper-zoom-container">
+                                <img src="dist/img/portfolio/Election/login.png" alt="Halaman Login" class="object-cover w-full">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper-zoom-container">
+                                <img src="dist/img/portfolio/Election/dashboard.png" alt="Dashboard" class="object-cover w-full">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper-zoom-container">
+                                <img src="dist/img/portfolio/Election/add-candidate.png" alt="Tambah Kandidat" class="object-cover w-full">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper-zoom-container">
+                                <img src="dist/img/portfolio/Election/manage-candidate.png" alt="Kelola Kandidat" class="object-cover w-full">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper-zoom-container">
+                                <img src="dist/img/portfolio/Election/edit-candidate.png" alt="Edit Kandidat" class="object-cover w-full">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper-zoom-container">
+                                <img src="dist/img/portfolio/Election/results.png" alt="Halaman Hasil" class="object-cover w-full">
+                            </div>
+                        </div>
                     </div>
                         <div class="swiper-pagination"></div>
                     </div>
@@ -258,31 +298,49 @@
                     <div class="swiper portfolio-slider">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <img src="dist/img/portfolio/Iqii-Scnd/login.png" alt="Halaman Login" class="object-cover w-full">
+                                <div class="swiper-zoom-container">
+                                    <img src="dist/img/portfolio/Iqii-Scnd/login.png" alt="Halaman Login" class="object-cover w-full">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="dist/img/portfolio/Iqii-Scnd/welcome-page.png" alt="Welcome" class="object-cover w-full">
+                                <div class="swiper-zoom-container">
+                                    <img src="dist/img/portfolio/Iqii-Scnd/welcome-page.png" alt="Welcome" class="object-cover w-full">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="dist/img/portfolio/Iqii-Scnd/list-items.png" alt="Halaman Daftar Barang" class="object-cover w-full">
+                                <div class="swiper-zoom-container">
+                                    <img src="dist/img/portfolio/Iqii-Scnd/list-items.png" alt="Halaman Daftar Barang" class="object-cover w-full">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="dist/img/portfolio/Iqii-Scnd/add-item.png" alt="Halaman Tambah Barang" class="object-cover w-full">
+                                <div class="swiper-zoom-container">
+                                    <img src="dist/img/portfolio/Iqii-Scnd/add-item.png" alt="Halaman Tambah Barang" class="object-cover w-full">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="dist/img/portfolio/Iqii-Scnd/add-item2.png" alt="Halaman Tambah Barang" class="object-cover w-full">
+                                <div class="swiper-zoom-container">
+                                    <img src="dist/img/portfolio/Iqii-Scnd/add-item2.png" alt="Halaman Tambah Barang" class="object-cover w-full">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="dist/img/portfolio/Iqii-Scnd/order.png" alt="Halaman Pesan" class="object-cover w-full">
+                                <div class="swiper-zoom-container">
+                                    <img src="dist/img/portfolio/Iqii-Scnd/order.png" alt="Halaman Pesan" class="object-cover w-full">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="dist/img/portfolio/Iqii-Scnd/service.png" alt="Halaman Pelayanan" class="object-cover w-full">
+                                <div class="swiper-zoom-container">
+                                    <img src="dist/img/portfolio/Iqii-Scnd/service.png" alt="Halaman Pelayanan" class="object-cover w-full">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="dist/img/portfolio/Iqii-Scnd/transaction.png" alt="Halaman Transaksi" class="object-cover w-full">
+                                <div class="swiper-zoom-container">
+                                    <img src="dist/img/portfolio/Iqii-Scnd/transaction.png" alt="Halaman Transaksi" class="object-cover w-full">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="dist/img/portfolio/Iqii-Scnd/reports.png" alt="Halaman Laporan" class="object-cover w-full">
+                                <div class="swiper-zoom-container">
+                                    <img src="dist/img/portfolio/Iqii-Scnd/reports.png" alt="Halaman Laporan" class="object-cover w-full">
+                                </div>
                             </div>
                         </div>
                         <div class="swiper-pagination"></div>
@@ -396,11 +454,6 @@
                                         <img class="w-full" src="dist/img/activity/programming/1.jpeg" alt="Programming 1">
                                     </div>
                                 </div>
-                                <div class="swiper-slide">
-                                    <div class="swiper-zoom-container">
-                                        <img class="w-full" src="dist/img/activity/programming/2.jpeg" alt="Programming 2">
-                                    </div>
-                                </div>
                             </div>
                             <div class="swiper-pagination"></div>
                         </div>
@@ -422,11 +475,6 @@
                                         <img class="w-full" src="dist/img/activity/hiking/1.jpg" alt="Hiking 1">
                                     </div>
                                 </div>
-                                <div class="swiper-slide">
-                                    <div class="swiper-zoom-container">
-                                        <img class="w-full" src="dist/img/activity/hiking/2.jpg" alt="Hiking 2">
-                                    </div>
-                                </div>
                             </div>
                             <div class="swiper-pagination"></div>
                         </div>
@@ -446,11 +494,6 @@
                                 <div class="swiper-slide">
                                     <div class="swiper-zoom-container">
                                         <img class="w-full" src="dist/img/activity/touring/1.jpeg" alt="Touring 1">
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="swiper-zoom-container">
-                                        <img class="w-full" src="dist/img/activity/touring/2.jpeg" alt="Touring 2">
                                     </div>
                                 </div>
                             </div>
