--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                 </div>
                 
                 <div class="px-5 py-5">
-                    <h3 class="mb-3 text-lg font-semibold text-dark">Inventory (Kasir Toko Trifting)</h3>
+                    <h3 class="mb-3 text-lg font-semibold text-dark">Iqii-ScndGok (Kasir Toko Trifting)</h3>
                     <p class="text-sm font-medium text-secondary">
                         Aplikasi kasir dan manajemen stok barang berbasis web yang dibangun dari dasar menggunakan PHP Native dan Bootstrap. Dirancang untuk mengelola seluruh proses bisnis toko, mulai dari pendataan produk, transaksi penjualan, hingga cetak struk dan laporan pendapatan.
                     </p>
