add smooth scrolling

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="id" class="scroll-smooth">
 
 <head>
     <meta charset="UTF-8" />
@@ -12,49 +12,50 @@
     <title>Portfolio</title>
 </head>
 
-<!-- Header Start -->
-    <header class="absolute top-0 left-0 z-10 flex items-center w-full bg-transparent">
-        <div class="container">
-            <div class="relative flex items-center justify-between">
-                <div class="px-4">
-                    <a href="#home" class="block py-6 text-lg font-bold text-primary">Initial D</a>
-                </div>
-                <div class="flex items-center px-4">
-                    <button id="hamburger" name="hamburger" type="button" class="absolute block right-4 lg:hidden">
-                        <span class="origin-top-left hamburger-line"></span>
-                        <span class="hamburger-line"></span>
-                        <span class="origin-bottom-left hamburger-line"></span>
-                    </button>
-
-                    <nav id="nav-menu" class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
-                        <ul class="block lg:flex">
-                            <li class="group">
-                                <a href="#home" class="flex py-2 mx-8 text-base text-dark group-hover:text-primary">Beranda</a>
-                            </li>
-                            <li class="group">
-                                <a href="#about" class="flex py-2 mx-8 text-base text-dark group-hover:text-primary">Tentang Saya</a>
-                            </li>
-                            <li class="group">
-                                <a href="#portfolio" class="flex py-2 mx-8 text-base text-dark group-hover:text-primary">Portfolio</a>
-                            </li>
-                            <li class="group">
-                                <a href="#clients" class="flex py-2 mx-8 text-base text-dark group-hover:text-primary">Clients</a>
-                            </li>
-                            <li class="group">
-                                <a href="#blog" class="flex py-2 mx-8 text-base text-dark group-hover:text-primary">Blog</a>
-                            </li>
-                            <li class="group">
-                                <a href="#contact" class="flex py-2 mx-8 text-base text-dark group-hover:text-primary">Contact</a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-        </div>
-    </header>
-<!-- Header End -->
 
 <body class="font-sans text-gray-800 bg-white">
+    <!-- Header Start -->
+        <header class="absolute top-0 left-0 z-10 flex items-center w-full bg-transparent">
+            <div class="container">
+                <div class="relative flex items-center justify-between">
+                    <div class="px-4">
+                        <a href="#home" class="block py-6 text-lg font-bold text-primary">Initial D</a>
+                    </div>
+                    <div class="flex items-center px-4">
+                        <button id="hamburger" name="hamburger" type="button" class="absolute block right-4 lg:hidden">
+                            <span class="origin-top-left hamburger-line"></span>
+                            <span class="hamburger-line"></span>
+                            <span class="origin-bottom-left hamburger-line"></span>
+                        </button>
+    
+                        <nav id="nav-menu" class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
+                            <ul class="block lg:flex">
+                                <li class="group">
+                                    <a href="#home" class="flex py-2 mx-8 text-base text-dark group-hover:text-primary">Beranda</a>
+                                </li>
+                                <li class="group">
+                                    <a href="#about" class="flex py-2 mx-8 text-base text-dark group-hover:text-primary">Tentang Saya</a>
+                                </li>
+                                <li class="group">
+                                    <a href="#portfolio" class="flex py-2 mx-8 text-base text-dark group-hover:text-primary">Portfolio</a>
+                                </li>
+                                <li class="group">
+                                    <a href="#clients" class="flex py-2 mx-8 text-base text-dark group-hover:text-primary">Clients</a>
+                                </li>
+                                <li class="group">
+                                    <a href="#blog" class="flex py-2 mx-8 text-base text-dark group-hover:text-primary">Blog</a>
+                                </li>
+                                <li class="group">
+                                    <a href="#contact" class="flex py-2 mx-8 text-base text-dark group-hover:text-primary">Contact</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </header>
+    <!-- Header End -->
+     
     <!-- Hero Section Start -->
     <section id="home" class="pt-36">
         <div class="container px-4 mx-auto">
