--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- Header End -->
      
     <!-- Hero Section Start -->
-    <section id="home" class="pt-36">
+    <section id="home" class="pt-20">
         <div class="container px-4 mx-auto">
             <div class="flex flex-wrap items-center">
                 <!-- Left -->
@@ -550,7 +550,7 @@
     <!-- Contact Section End -->
 
     <!-- Footer Start  -->
-     <footer class="pt-24 pb-12 bg-dark">
+    <footer class="pt-24 pb-12 bg-dark">
         <div class="container">
             <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-12 font-medium text-slate-300 md:w-1/3">
@@ -649,8 +649,14 @@
                 </p>
             </div>
         </div>
-     </footer>
+    </footer>
     <!-- Footer End -->
+
+    <!-- Back to top Start -->
+    <a href="#home" id="to-top"class="hover:animate-pulse fixed z-[9999] bottom-4 hidden justify-center items-center right-4 w-12 p-4 rounded-full h-12 bg-primary">
+        <span class="block w-3 h-3 mt-1 rotate-45 border-t-2 border-l-2"></span>
+    </a>
+    <!-- Back to top End-->
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="dist/js/script.js"></script>
